Fix ToggleMenu z-index

--- a/src/App.css
+++ b/src/App.css
@@ -105,7 +105,7 @@ p.danger {
   top: 0;
   z-index: 9999;
   @media screen and (max-width: 960px) {
-    transition: 0.8 all ease;
+    transition: 0.8s all ease;
   }
 }
 .nav-container {
@@ -209,12 +209,13 @@ p.danger {
 }
 .toggle-menu-container {
   position: fixed;
-  z-index: 9999;
+  z-index: 99999;
   width: 100%;
   height: 100%;
   background: #262626;
   display: grid;
   align-items: center;
+  justify-content: center;
   top: 0;
   left: 0;
   transition: 0.3s ease-in-out;
